公钥私钥签名

--- a/Lear.Mvc/Views/Home/Index.cshtml
+++ b/Lear.Mvc/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-<form id="form" action="/home/index/" method="get">
+<form id="form" action="/home/do1/" method="post">
     输入姓名: <input type="text" id="myname" name="name" /><br>
     输入年龄: <input type="text" id="myage" name="age" /><br>
     <input type="submit" value="提交" />
